# metroclaude

./: .env.example  .gitignore  AUDIT_SECURITY_HANDLERS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
metroclaude/: __init__.py  __main__.py  bot.py  config.py  exceptions.py  hooks.py  hooks_session_start.py  monitor.py  parser.py  session.py  tmux.py
metroclaude/handlers/: callback_data.py  commands.py  interactive.py  message.py  status.py
metroclaude/security/: __init__.py  audit.py  auth.py  input_sanitizer.py  rate_limiter.py
metroclaude/utils/: markdown.py  queue.py
tests/: conftest.py  test_interactive.py  test_parser.py  test_queue.py  test_rate_limiter.py  test_security.py  test_session.py  test_tmux.py
