[project]
name = "metroclaude"
version = "0.1.0"
description = "Pilot Claude Code from your phone via Telegram"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ahmed", email = "ahmed@joyjuice.co" },
]
dependencies = [
    "python-telegram-bot>=21.0",
    "libtmux>=0.37.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
markdown = [
    "mistletoe",
    "telegramify-markdown",
]
voice = ["openai-whisper"]
screenshot = ["Pillow"]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
metroclaude = "metroclaude.__main__:main"

[project.urls]
Homepage = "https://github.com/EncrEor/metroclaude"
Repository = "https://github.com/EncrEor/metroclaude"
Issues = "https://github.com/EncrEor/metroclaude/issues"
Changelog = "https://github.com/EncrEor/metroclaude/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
